<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ManualActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white">

	<ScrollView
		android:id="@+id/scrollview"
...
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:context="com.example.activities.ManualActivity">


			<AutoCompleteTextView
				android:id="@+id/medicine_name_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/medical_info"
...
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/medicine_name_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/dosage_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/colorize"
...
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/dosage_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/quantity_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/scale"
...
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/quantity_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/renuwal_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/repeat"
...
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/renuwal_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/shape_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/mixture_med"
...
				app:layout_constraintStart_toStartOf="@+id/shape_title"
				app:layout_constraintTop_toBottomOf="@+id/shape_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/date_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/calendar_month"
...
				app:layout_constraintStart_toStartOf="@+id/shape_title"
				app:layout_constraintTop_toBottomOf="@+id/date_title"
				app:layout_constraintWidth_percent="0.95"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/frequency_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/acute"
...
				app:layout_constraintStart_toStartOf="@+id/frequency_title"
				app:layout_constraintTop_toBottomOf="@+id/frequency_title"
				app:layout_constraintWidth_percent="0.35"
				app:tint="#FF0000" />

			<EditText
				android:id="@+id/duration_edit"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="8dp"
				android:background="@drawable/edit_text_manual_filling_border"
				android:drawableStart="@drawable/pending_actions"
...
				android:textSize="20sp"
				android:textStyle="bold"
				app:layout_constraintStart_toStartOf="@+id/medicine_name_edit"
				app:layout_constraintTop_toTopOf="parent" />

			<Button
				android:id="@+id/validateButton"
				style="@style/Widget.AppCompat.Button"
				android:theme="@style/ButtonManualFillingStyle"
				android:layout_width="130dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="60dp"
				android:layout_marginTop="32dp"
...
				app:backgroundTint="@null"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/date_edit" />

			<Button
				android:id="@+id/cancelButton"
				style="@style/Widget.AppCompat.Button"
				android:theme="@style/ButtonManualFillingStyle"
				android:layout_width="130dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:layout_marginEnd="60dp"
...
				android:layout_height="wrap_content"
				android:textColor="#FF0000"
				app:layout_constraintStart_toStartOf="@+id/duration_edit"
				app:layout_constraintTop_toBottomOf="@+id/duration_edit" />

			<TextView
				android:id="@+id/renuwalTextInfo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="#FF0000"
				app:layout_constraintStart_toStartOf="@+id/renuwal_edit"
				app:layout_constraintTop_toBottomOf="@+id/renuwal_edit" />

...
